manifests/publicapi.yaml
apiVersion: v1
kind: Service
metadata:
  name: public-api-service
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  - port: 443
    protocol: TCP
    targetPort: 9090
  selector:
    app: public-api-deployment
  type: LoadBalancer
status:
  loadBalancer: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: public-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: public-api-deployment
  template:
    metadata:
      labels:
        app: public-api-deployment
    spec:
      containers:
      - image: ghcr.io/lancewells/loot-loadout/public-api:latest
        name: public-api
        ports:
        - containerPort: 8080
          name: http-port
        - containerPort: 9090
          name: grpc-port
        resources:
          limits:
            cpu: 500m
            memory: 128Mi
