manifests/roomsocket.yaml
apiVersion: v1
kind: Service
metadata:
  name: room-socket-service
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: room-socket-deployment
  type: LoadBalancer
status:
  loadBalancer: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: room-socket-deployment
spec:
  selector:
    matchLabels:
      app: room-socket-deployment
    replicas: 1
  template:
    metadata:
      labels:
        app: room-socket-deployment
    spec:
      containers:
      - image: lantspants/lootloadout/roomsocket
        name: roomsocket
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 500m
            memory: 128Mi
