manifests/frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  ports:
  - port: 3001
    protocol: TCP
    targetPort: 3000
  selector:
    app: frontend
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - image: ghcr.io/lancewells/loot-loadout/frontend:latest
        name: frontend
        ports:
        - containerPort: 3000
        resources:
          limits:
            cpu: 250m
            memory: 256Mi
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    dev.okteto.com/generate-host: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  labels:
    name: frontend
  name: frontend
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: frontend
            port:
              number: 3000
        path: /
        pathType: Prefix
