manifests/characterimage.yaml
apiVersion: v1
kind: Service
metadata:
  name: character-image
spec:
  ports:
  - name: http-port
    port: 8888
    protocol: TCP
  - name: grpc-port
    port: 9999
    protocol: TCP
  selector:
    app: character-image
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: character-image-db
spec:
  ports:
  - name: psql-port
    port: 5432
    protocol: TCP
  selector:
    app: character-image-db
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: character-image
spec:
  replicas: 1
  selector:
    matchLabels:
      app: character-image
  template:
    metadata:
      labels:
        app: character-image
    spec:
      containers:
      - env:
        - name: POSTGRES_DB
          value: $CHARIMAGE_DB_DBNAME
        - name: POSTGRES_USER
          value: $CHARIMAGE_DB_USER
        - name: POSTGRES_PASSWORD
          value: $CHARIMAGE_DB_PASS
        - name: POSTGRES_PORT
          value: $CHARIMAGE_DB_PORT
        image: ghcr.io/lancewells/loot-loadout/character-image:latest
        name: character-image
        ports:
        - containerPort: 8888
          name: http-port
        - containerPort: 9999
          name: grpc-port
        resources:
          limits:
            cpu: 500m
            memory: 128Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: character-image-db
spec:
  selector:
    matchLabels:
      app: character-image-db
  template:
    metadata:
      labels:
        app: character-image-db
    spec:
      containers:
      - env:
        - name: POSTGRES_DB
          value: $CHARIMAGE_DB_DBNAME
        - name: POSTGRES_USER
          value: $CHARIMAGE_DB_USER
        - name: POSTGRES_PASSWORD
          value: $CHARIMAGE_DB_PASS
        image: postgres:14.4
        name: character-image-db
        ports:
        - containerPort: 5432
          name: psql-port
        resources:
          limits:
            cpu: 500m
            memory: 128Mi
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    dev.okteto.com/generate-host: "true"
    nginx.ingress.kubernetes.io/backend-protocol: GRPC
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  labels:
    name: character-image-grpc
  name: character-image-grpc
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - backend:
          service:
            name: character-image
            port:
              number: 9999
        path: /
        pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: character-image-db
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          db: character-image
    ports:
    - port: 5432
      protocol: TCP
  podSelector:
    matchLabels:
      db: character-image
  policyTypes:
  - Ingress
